Bug fix and edit layout